# inferno

./: README.md
code/host_device_template/: device.sh  deviceSerial.sh  host.sh
code/interpreter/: Makefile  Makefile.am  Makefile.in  config.status  configParser.cpp  configParser.h  configure  configure.ac  defs.h  defs.h.in  deviceCodeGenerator.cpp  deviceCodeGenerator.h  device_ip  finish.sh  hostCodeGenerator.cpp  hostCodeGenerator.h  interpreter  interpreter.cpp  map.cpp  map.h  map.template  merge.cpp  merge.h  merge.template  reduce.cpp  reduce.h  reduce.template  stamp-h1  templateConverter.cpp  templateConverter.h  user.sh  userFileParser.cpp  userFileParser.h
code/interpreter/.deps/: configParser.Po  deviceCodeGenerator.Po  hostCodeGenerator.Po  interpreter.Po  map.Po  merge.Po  reduce.Po  templateConverter.Po  userFileParser.Po
code/interpreter/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
code/map/: device0.sh  device0.template  device1.sh  device1.template  host.sh  user.sh  user.template
code/merge/: device1.sh  host.sh  user.sh
code/reduce/: device0.sh  device1.sh  device2.sh  host.sh  user.sh
materials/inferno/: getting-started.html  inferno-0  inferno-1  inferno-2
materials/opencl/: 2315830.html
report/: .#pic  chapter4  chapter5  outline  pic
report/final_report/: 1.aux  1.tex  1.tex~  1.toc  outline  parallel.sh  parallel.sh~  serial.sh  serial.sh~
report/presentation/: os_ppt.odp  speech
report/submit_1/: 1.aux  1.tex  1.toc
report/submit_2/: 1.aux  (+2 more)
resources/: #steps#  account  steps
(+11 files in other folders)
