bin_PROGRAMS = interpreter

interpreter_SOURCES = deviceCodeGenerator.cpp \
hostCodeGenerator.cpp \
interpreter.cpp \
map.cpp \
reduce.cpp \
merge.cpp \
userFileParser.cpp \
configParser.cpp \
templateConverter.cpp

include_HEADERS = defs.h \
deviceCodeGenerator.h \
hostCodeGenerator.h \
map.h \
reduce.h \
merge.h \
userFileParser.h \
configParser.h \
templateConverter.h


