#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(Inferno_Parallel_Interpreter, 0.90, rzy@mail.ustc.edu.cn)
AC_CONFIG_SRCDIR([interpreter.cpp])
AC_CONFIG_HEADERS([defs.h])
AM_INIT_AUTOMAKE
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([Makefile])
